src/objects/Diagnostico__c.object
<CustomObject>
    <fields>
        <fullName>Comercial__c</fullName>
        <label>Comercial</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diagnostico__c</fullName>
        <label>Projeto Renovação</label>
        <referenceTo>Projeto_Renova_o__c</referenceTo>
        <relationshipLabel>Diagnosticos</relationshipLabel>
        <relationshipName>Diagnosticos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gestao__c</fullName>
        <label>Gestão</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Numero__c</fullName>
        <label>Número</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Representante_Vipal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Representante Vipal</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Diagnosticos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Representante__c</fullName>
        <label>Representante Reformador</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tecnico__c</fullName>
        <label>Técnico</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Diagnostico</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>AnálisedoCliente-{0000}</displayFormat>
        <label>Nome de Diagnostico</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diagnosticos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>